# mcp-commands

./: .gitignore  .goreleaser.yaml  .harness-sync  AGENTS.md  IDEA.md  Makefile  PLAN.md  README.md  go.mod  main.go  main_test.go  opencode.jsonc  tui.jsonc
.github/workflows/: release.yml
.nono/: profile.json
.nono/hooks/: after.sh  before.sh
.opencode/agents/: Buddy.md  Builder.md  CodeReviewer.md  Committer.md  DocumentationEngineer.md  Explorer.md  Librarian.md  PlanReviewer.md  Planner.md  Testing.md
.opencode/commands/: archive_plan.md  codereview.md  implement_next_task.md  research.md
.opencode/skills/create-projectmap/: SKILL.md
.zed/: debug.json
androidbuild/src/mcpandroidbuild/: build.sh
cpp-mcp/: AGENTS.md  CMakeLists.txt  init-sbx.sh  opencode.jsonc
cpp-mcp/.opencode/agents/: Chronicler.md  Committer.md  Dreamer.md  Explorer.md  Librarian.md  Planner.md  Reviewer.md  Testing.md
cpp-mcp/.opencode/commands/: implement_next_task.md
cpp-mcp/clibridge/: CMakeLists.txt  executable_scanner.h  main.cpp
cpp-mcp/docs/plans/: 2026-05-27_initial.md
cpp-mcp/test/: CMakeLists.txt  executable_scanner_test.cpp
gopher-mcp/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  vcpkg.json
gopher-mcp/.github/workflows/: build-all.yml  pr-checks.yml
gopher-mcp/examples/mcp/: CMakeLists.txt  mcp_example_server.cc  mcp_https_example.cc
gopher-mcp/examples/transport/: CMakeLists.txt  mcp_client_sse_example.cc
gopher-mcp/sdk/go/: go.mod
gopher-mcp/src/: mcp_connection_manager.cc
gopher-mcp/src/client/: mcp_client.cc
gopher-mcp/src/config/: file_config_source.cc
gopher-mcp/src/server/: mcp_server.cc
gopher-mcp/tests/: CMakeLists.txt
plans/: 2026-07-01-review.md  2026-07-02-mcp-improvements.md
src/: go.mod  go.sum  main.go  main_test.go
(+41 files in other folders)
